# rti-simulator

./: .gitignore  CMakeLists.txt  README.md  setup.sh  vercel.json
docs/: 01-analysis.md  02-design.md  03-development-log.md  04-testing.md  05-evaluation.md  math-appendix.md  references.md
learning/: 00-prerequisites.md  00a-the-as-level-bridge.md  00b-the-a-level-bridge.md  01-voxel-maths.md  02-forward-model.md  03-linear-algebra.md  04-tikhonov-regularisation.md  05-cpp-control-flow.md  06-visualisation.md  ROADMAP.md  glossary.md
learning/critical-evaluation/: core-defenses.md  maths-you-must-know.md  trade-off-questions.md  worst-case-scenarios.md
portfolio/: 01-architecture-and-memory.md  01-architecture.md  02-physics-engine.md  03-maths-engine.md  04-testing-and-results.md
scenes/: test_person_centre.json
src/: forward_model.cpp  forward_model.h  main.cpp  node.cpp  node.h  reconstructor.cpp  reconstructor.h  scene.cpp  scene.h  visualiser.cpp  visualiser.h  voxel_grid.cpp  voxel_grid.h
viewer/: comparison.html  index.html  recon.html  truth.html  two-people.html
